--- a/modules/roles/client/views/role-list.html
+++ b/modules/roles/client/views/role-list.html
@@ -3,13 +3,14 @@
 <div class="row">
 	<div class="col-sm-12 text-right">
 		<a class="btn btn-xs btn-link" ui-sref="admin.roles.create()">+ Add New System Role</a>
+		<show-filter x-toggle-filter="toggleFilter"></show-filter>
 	</div>
 </div>
 
 <div class="row">
 	<div class="col-sm-12">
 		<section class="panel panel-default">
-			<table ng-table="tableParams" class="table table-condensed table-striped table-hover">
+			<table ng-table="tableParams" x-show-filter="toggleFilter" class="table table-condensed table-striped table-hover">
 				<tr ng-repeat="o in $data" ui-sref="admin.roles.detail({roleCode:o.code})" class="clickable">
 					<td data-title="'Role'"  filter="{'code':'text'}"   sortable="'code'">{{o.code}}</td>
 					<td data-title="'Organization Code'"  filter="{'orgCode':'text'}"   sortable="'orgCode'">{{o.orgCode}}</td>
