Adding 'No records found' entry to Templates List if there are no templates to display

--- a/modules/templates/client/views/template-list.html
+++ b/modules/templates/client/views/template-list.html
@@ -32,6 +32,11 @@
 						<i class="glyphicon glyphicon-play"></i>
 						</a></td>
 				</tr>
+				<tr ng-if="!$data || $data.length === 0">
+					<td colspan="5">
+						No records found.
+					</td>
+				</tr>
 			</table>
 		</section>
 	</div>
