--- a/modules/project-complaints/client/views/complaint-edit.html
+++ b/modules/project-complaints/client/views/complaint-edit.html
@@ -45,7 +45,7 @@
 			<div class="col-sm-4">
 				<div class="form-group">
 					<label for="stage" class="control-label">Applicable Value Components</label>
-					<select-array x-source-array="d.vcs" x-selected-array='complaint.vcs'></select-array>
+					<select-array x-source-array="d.vcs" x-selected-array='complaint.vcs' x-key-string="id" x-value-string="title"></select-array>
 				</div>
 			</div>			
 		</div>
