--- a/modules/conditions/client/views/condition-edit.html
+++ b/modules/conditions/client/views/condition-edit.html
@@ -60,7 +60,7 @@
 				<div class="form-group">
 					<label for="pillar" class="control-label">Pillars</label>
 					<div class="well well-sm">
-						<select-array x-source-array="pillars" x-selected-array="condition.pillars"></select-array>
+						<select-array x-source-array="pillars" x-selected-array="condition.pillars" x-key-string="id" x-value-string="title"></select-array>
 					</div>
 				</div>
 			</div>
@@ -69,7 +69,7 @@
 				<div class="form-group">
 					<label for="stage" class="control-label">Applicable Stages</label>
 					<div class="well well-sm">
-						<select-array x-source-array="stages" x-selected-array="condition.stages"></select-array>
+						<select-array x-source-array="stages" x-selected-array="condition.stages" x-key-string="id" x-value-string="title"></select-array>
 					</div>
 				</div>
 			</div>
