--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -629,6 +629,12 @@ h3.panel-title {
 	margin-top: 1px;
 }
 
+.form-group .form-control-static {
+	box-shadow: inset 0 0 50px rgba(0,0,0,0.1);
+	border-radius: 3px;
+	padding-left: 5px;
+}
+
 .panel label + p,
 .panel label + ul {
 	margin-bottom: 15px;
