--- a/modules/templates/client/views/template-list.html
+++ b/modules/templates/client/views/template-list.html
@@ -12,15 +12,15 @@
 		<section class="panel panel-default">
 			<table ng-table="tableParams" x-show-filter="toggleFilter" class="table table-condensed table-hover table-striped">
 				<tr ng-repeat="o in $data" ui-sref="admin.template.detail({templateId:o.id})" class="clickable">
-					<td title="'Document Type'"
+					<td data-title="'Document Type'"
 						filter="{'documentType':'text'}"
 						sortable="'name'">{{o.documentType}}</td>
 
-					<td title="'Version Number'"
+					<td data-title="'Version Number'"
 						sortable="'versionNumber'"
 						class="text-center">{{o.versionNumber}}</td>
 
-					<td title="'Date Updated'"
+					<td data-title="'Date Updated'"
 						sortable="'dateUpdated'"
 						class="text-center">{{o.dateUpdated | date:'y-MM-dd HH:mm a'}}</td>
 
