--- a/modules/projects/client/views/projects-partials/projects-map.html
+++ b/modules/projects/client/views/projects-partials/projects-map.html
@@ -1,25 +1,37 @@
 <section class='panel panel-default'>
-	<map center="54.726668, -127.647621" zoom="5" style='height: 500px' map-type-id="ROADMAP" min-zoom=5 disable-default-u-i="true">
-		<marker id="marker_{{ project._id }}" position="{{ project.lat }},{{ project.lon }}" ng-repeat-start="project in projectsFiltered = (projectList.projects | filter:{'type':filterType, 'status':filterStatus,'region':filterRegion})" on-click="showInfoWindow(event, 'info_{{ project._id }}')">
-		</marker>
-		<info-window id="info_{{ project._id }}" visible-on-marker="marker_{{ project._id }}" max-width="300" ng-repeat-end>
-			<div>
-				<div id="siteNotice"></div>
-				<h3 id="firstHeading" class="firstHeading">{{ project.name }}</h3>
-				<div id="bodyContent">
-					<p><strong>Status</strong>: {{ project.status }}</p>
-					<p><strong>Type</strong>: {{ project.type }}</p>
-					<p>{{ project.description }}</p>
-					<p><a html ui-sref="p.detail({projectid: project.code})">Detail View</a></p>
-				</div>
-			</div>
-		</info-window>
-	</map>
+
+	<ui-gmap-google-map id='projects-map'
+					center='projectList.map.center'
+					zoom='projectList.map.zoom'
+					refresh='1'
+					options='projectList.map.options'>
+
+		<ui-gmap-window
+			show="projectList.map.window.show"
+			coords="projectList.map.window.model"
+			options="projectList.map.window.options"
+			closeClick="projectList.map.window.closeClick()"
+			templateUrl="'modules/projects/client/views/projects-partials/projects-map-window.html'"
+			templateParameter="projectList.map.window.model"
+			ng-cloak>
+		</ui-gmap-window>
+
+
+		<ui-gmap-markers
+			models="projectList.projectsFiltered"
+			idKey="'_id'"
+			coords="'self'"
+			type="'cluster'"
+			events="projectList.map.markersEvents">
+		</ui-gmap-marker>
+
+	</ui-gmap-google-map>
+
 	<div class="row map-filter">
 		<div class="col-sm-12">
 			<div class="form-inline text-right">
 				<div class="form-group form-group-sm">
-					<span class="form-control-static">Projects Found: {{ projectsFiltered.length || 0}}&nbsp;&nbsp;</span>
+					<span class="form-control-static">Projects Found: {{ projectList.projectsFiltered.length || 0}}&nbsp;&nbsp;</span>
 				</div>
 				<select ng-model="filterType" class="form-control input-sm" ng-options="v as v for v in projectList.types"><option value="">All</option></select>
 				<select ng-model="filterStatus" class="form-control input-sm" ng-options="v as v for v in projectList.status"><option value="">All</option></select>
