--- a/modules/projects/client/views/projects-partials/projects-list.html
+++ b/modules/projects/client/views/projects-partials/projects-list.html
@@ -6,12 +6,12 @@
 	</div>
 	<table x-show-filter="toggleFilter" ng-table="projectList.tableParams" class="table table-condensed table-striped">
 		<tr ng-repeat="o in $data" class='clickable' ui-sref="p.detail({projectid: o.code})">
-			<td title="'Name'"     filter="{'name':'text'}"     			sortable="'name'"   >{{o.name}}</td>
-			<td ng-if="environment === 'MEM'" title="'Permit'"   filter="{'memPermitID':'text'}" filter-data="projectList.memPermitID"  			sortable="'memPermitID'" >{{o.memPermitID}}</td>
-			<td title="'Type'"     filter="{'type':'select'}" filter-data="projectList.types"    			sortable="'type'"   >{{o.type}}</td>
-			<td title="'Region'"   filter="{'region':'text'}"   			sortable="'region'" >{{o.region | regionName}}</td>
-			<td title="'Phase'"    filter="{'currentPhase.name':'text'}"   	sortable="'currentPhase.name'" >{{o.currentPhase.name}}</td>
-			<td ng-if="environment === 'EAO'" title="'Status'"   filter="{'status':'select'}" filter-data="projectList.status"  			sortable="'status'" >{{o.status}}</td>
+			<td data-title="'Name'"     filter="{'name':'text'}"     			sortable="'name'"   >{{o.name}}</td>
+			<td ng-if="environment === 'MEM'" title="'data-Permit'"   filter="{'memPermitID':'text'}" filter-data="projectList.memPermitID"  			sortable="'memPermitID'" >{{o.memPermitID}}</td>
+			<td data-title="'Type'"     filter="{'type':'select'}" filter-data="projectList.types"    			sortable="'type'"   >{{o.type}}</td>
+			<td data-title="'Region'"   filter="{'region':'text'}"   			sortable="'region'" >{{o.region | regionName}}</td>
+			<td data-title="'Phase'"    filter="{'currentPhase.name':'text'}"   	sortable="'currentPhase.name'" >{{o.currentPhase.name}}</td>
+			<td ng-if="environment === 'EAO'" data-title="'Status'"   filter="{'status':'select'}" filter-data="projectList.status"  			sortable="'status'" >{{o.status}}</td>
 		</tr>
 		<tr ng-show="!$data || !$data.length" class="text-center">
 			<td ng-if="environment === 'EAO'" colspan="5">No results match your search.</td>
