Fixing bug with Organizations where the DBA field wasn't saving or displaying properly

--- a/modules/organizations/client/views/organization-edit.html
+++ b/modules/organizations/client/views/organization-edit.html
@@ -35,8 +35,8 @@
 		<div class="row">
 			<div class="col-sm-8">
 				<div class="form-group">
-					<label for="companyDba" class="control-label">Doing Business As</label>
-					<input id="companyDba" type="text" class="form-control input-sm" ng-model="org.companyDba">
+					<label for="company" class="control-label">Doing Business As</label>
+					<input id="company" type="text" class="form-control input-sm" ng-model="org.company">
 				</div>
 			</div>
 			<div class="col-sm-4">
