Adding 'Country' to the Organization model so that it can be saved properly. Also fixing postal code field so that it can be saved/viewed properly

--- a/modules/organizations/client/views/organization-edit.html
+++ b/modules/organizations/client/views/organization-edit.html
@@ -100,8 +100,8 @@
 			</div>
 			<div class="col-sm-3">
 				<div class="form-group">
-					<label for="postalCode" class="control-label">Postal Code</label>
-					<input id="postalCode" type="text" class="form-control input-sm" ng-model="org.postalCode">
+					<label for="postal" class="control-label">Postal Code</label>
+					<input id="postal" type="text" class="form-control input-sm" ng-model="org.postal">
 				</div>
 			</div>
 		</div>
