--- a/modules/organizations/client/views/organization-view.html
+++ b/modules/organizations/client/views/organization-view.html
@@ -35,8 +35,8 @@
 			<div class="row">
 				<div class="col-sm-8">
 					<div class="form-group">
-						<label for="companyDba" class="control-label">Doing Business As</label>
-						<p class="form-control-static">{{ org.companyDba }}</p>
+						<label for="company" class="control-label">Doing Business As</label>
+						<p class="form-control-static">{{ org.company }}</p>
 					</div>
 				</div>
 				<div class="col-sm-4">
@@ -100,8 +100,8 @@
 				</div>
 				<div class="col-sm-3">
 					<div class="form-group">
-						<label for="postalCode" class="control-label">Postal Code</label>
-						<p class="form-control-static">{{ org.postalCode }}</p>
+						<label for="postal" class="control-label">Postal Code</label>
+						<p class="form-control-static">{{ org.postal }}</p>
 					</div>
 				</div>
 			</div>
