Fixing bug where Pillars and Stages weren't displaying when viewing an Organization

--- a/modules/conditions/client/views/condition-view.html
+++ b/modules/conditions/client/views/condition-view.html
@@ -55,7 +55,7 @@
 				<div class="form-group">
 					<label for="pillar" class="control-label">Pillars</label>
 					<div class="well well-sm">
-						<display-array x-source-array="pillars" x-selected-array="condition.pillars"></display-array>
+						<display-array x-source-array="pillars" x-selected-array="condition.pillars" x-key-string="id" x-value-string="title"></display-array>
 					</div>
 				</div>
 			</div>
@@ -64,7 +64,7 @@
 				<div class="form-group">
 					<label for="stage" class="control-label">Applicable Stages</label>
 					<div class="well well-sm">
-						<display-array x-source-array="stages" x-selected-array="condition.stages"></display-array>
+						<display-array x-source-array="stages" x-selected-array="condition.stages" x-key-string="id" x-value-string="title"></display-array>
 					</div>
 				</div>
 			</div>
